--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "CI=npm run build",
+    "predeploy": "npm run build",
     "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
